# Calculator

./: CMakeLists.txt  LICENSE  calculator.cpp  calculator.hpp  main.cpp  operations.hpp  token.cpp  token.hpp
test/: test_calculations.cpp  test_preprocessor.cpp
